Bug fixes: -ve numbers, colour change, truncation

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 #clock2 {
-  margin: 0px 5px 0px 10%;
+  margin: 0px 5px 0px 5%;
 }
 
 .clock {
@@ -15,7 +15,7 @@
   border-style: solid;
   border-radius: 80px;
   padding: 10px 10px 10px 10px;
-  font-size: 170px;
+  font-size: 150px;
   cursor: pointer;
 }
 
